Fixing layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,7 @@ footer {
     margin: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
     align-items: center;
     padding-top: 6rem;
   }
@@ -146,26 +147,17 @@ footer {
     left: 4rem;
   }
 
-  /* .name {
-    position: absolute;
-    top: 32rem;
-    left: 3.5rem;
-    font-size: 1.3rem;
-  } */
-
-  /* .title {
-    position: absolute;
-    top: 32rem;
-    left: 13.3rem;
-    font-size: 1.3rem;
-  } */
+  .name_title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+  }
 
   footer {
-    /* grid-row: 3/3; */
     grid-column: 1/3;
-    background-position: -2rem 0;
-    min-height: 10rem;
-    /* background-size: contain; */
+    background-position: -1rem top;
+    background-size: contain;
   }
   
 }
